--- a/components/websockify/Makefile
+++ b/components/websockify/Makefile
@@ -1,5 +1,6 @@
 bin/websockify:
-	mkdir -p src && cd src && git clone https://github.com/novnc/websockify.git
+	doas pkg install -y py311-pyinstaller
+	mkdir -p src && cd src && (git clone https://github.com/novnc/websockify.git || (cd websockify && git pull))
 	pyinstaller --onefile src/websockify/websockify/__main__.py
 	cp dist/__main__ websockify
 
