--- a/components/websockify/justfile
+++ b/components/websockify/justfile
@@ -1,11 +1,26 @@
-bin/websockify:
-	doas pkg install -y py311-pyinstaller
+[private]
+default:
+	@just --list
+
+# Test that environment is OK
+test-env:
+	pkg info py311-pyinstaller
+
+# Make websockify
+[group('public')]
+make-websockify: 
 	mkdir -p src && cd src && (git clone https://github.com/novnc/websockify.git || (cd websockify && git pull))
 	pyinstaller --onefile src/websockify/websockify/__main__.py
 	cp dist/__main__ websockify
 
+# Clean everything up
 clean:
 	rm -rf src
 	rm -rf build
 	rm -rf dist
 	rm  -f *.spec
+
+# Install requirements
+install-requirements:
+	pkg install -y py311-pyinstaller
+
